Added cgdb and valgrind support, basic parameter passing in structs.

--- a/wk1/Makefile
+++ b/wk1/Makefile
@@ -29,6 +29,12 @@ $(PROGNAME): $(OBJFILES)
 run: $(PROGNAME)
 	prun -v -np 1 $(PROGNAME) $(RUNARGS)
 
+cgdb: $(PROGNAME)
+	cgdb --args $(PROGNAME) $(RUNARGS)
+
+valgrind: $(PROGNAME)
+	valgrind ./$(PROGNAME) $(RUNARGS)
+
 runlocal: $(PROGNAME)
 	./$(PROGNAME) $(RUNARGS)
 
