--- a/1wk/Makefile
+++ b/1wk/Makefile
@@ -3,7 +3,11 @@ SRCFILES = assign1_1.c file.c timer.c simulate.c
 TARNAME = assign1_1.tgz
 
 # i_max t_max num_threads
-RUNARGS = 1000 1000000 4
+RUNARGS_T1 = 1000000 1000 1
+RUNARGS_T2 = 1000000 1000 2
+RUNARGS_T3 = 1000000 1000 4
+RUNARGS_T4 = 1000000 1000 8
+RUNARGS = 1000 1000000 1
 # RUNARGS = 20 10 4
 
 IMAGEVIEW = display
@@ -28,7 +32,10 @@ $(PROGNAME): $(OBJFILES)
 	$(CC) -c $(CFLAGS) -o $@ $<
 
 run: $(PROGNAME)
-	prun -v -np 1 $(PROGNAME) $(RUNARGS)
+	prun -v -np 1 $(PROGNAME) $(RUNARGS_T1)
+	prun -v -np 1 $(PROGNAME) $(RUNARGS_T2)
+	prun -v -np 1 $(PROGNAME) $(RUNARGS_T3)
+	prun -v -np 1 $(PROGNAME) $(RUNARGS_T4)
 
 cgdb: $(PROGNAME)
 	cgdb --args $(PROGNAME) $(RUNARGS)
