Finished the wave

--- a/1wk/Makefile
+++ b/1wk/Makefile
@@ -7,8 +7,6 @@ RUNARGS_T1 = 1000000 1000 1
 RUNARGS_T2 = 1000000 1000 2
 RUNARGS_T3 = 1000000 1000 4
 RUNARGS_T4 = 1000000 1000 8
-RUNARGS = 1000 1000000 1
-# RUNARGS = 20 10 4
 
 IMAGEVIEW = display
 CC = gcc
@@ -44,7 +42,10 @@ valgrind: $(PROGNAME)
 	valgrind ./$(PROGNAME) $(RUNARGS)
 
 runlocal: $(PROGNAME)
-	./$(PROGNAME) $(RUNARGS)
+	./$(PROGNAME) $(RUNARGS_T1)
+	./$(PROGNAME) $(RUNARGS_T2)
+	./$(PROGNAME) $(RUNARGS_T3)
+	./$(PROGNAME) $(RUNARGS_T4)
 
 plot: result.txt
 	gnuplot plot.gnp
