--- a/2wk/assign2_1/Makefile
+++ b/2wk/assign2_1/Makefile
@@ -1,4 +1,4 @@
-PROGNAME = assign2_1
+PROGNAME = assign2_1.out
 SRCFILES = assign2_1.c file.c timer.c simulate.c
 TARNAME = assign2_1.tgz
 
@@ -9,7 +9,8 @@ CC = gcc
 
 WARNFLAGS = -Wall -Werror-implicit-function-declaration -Wshadow \
 		  -Wstrict-prototypes -pedantic-errors
-CFLAGS = -std=c99 -ggdb -O2 $(WARNFLAGS) -D_POSIX_C_SOURCE=200112 -fopenmp
+CFLAGS = -std=c99 -ggdb -O2 $(WARNFLAGS) -D_POSIX_C_SOURCE=200112 -fopenmp \
+		 -DSCHEDULE=static
 LFLAGS = -lm -lrt
 
 # Do some substitution to get a list of .o files from the given .c files.
