I have little offset :/

--- a/2wk/assign2_2/Makefile
+++ b/2wk/assign2_2/Makefile
@@ -2,7 +2,7 @@ PROGNAME = assign2_2.out
 SRCFILES = reduction.c timer.c
 TARNAME = assign2_2.tgz
 
-RUNARGS = 4 1000000 #num_threads vec_size
+RUNARGS = 4 100 #num_threads vec_size
 
 CC = gcc
 
