Updated hashtag searching

--- a/4wk/assign4_1/Makefile
+++ b/4wk/assign4_1/Makefile
@@ -3,5 +3,5 @@ run:
 	rm -rf out/
 	java -jar nl.uva.AssignmentMapreduce.jar ../tweets2009-06-brg1of2.txt out 1
 
-sort:
+sort: run
 	sort -n -k 2 out/*
