--- a/5wk/src/reduction/Makefile
+++ b/5wk/src/reduction/Makefile
@@ -1,11 +1,11 @@
-PROG = reduction
+PROG = reduce-max
 NVCC = nvcc
 CC = g++
 #CU_FLAGS= -O3 -g -deviceemu
 CU_FLAGS = -O3 -g --ptxas-options=-v -arch compute_20 -code sm_20
 CC_FLAGS = -O3 -m64 -Wall
 
-CU_SOURCES = reduction.cu
+CU_SOURCES = reduce-max.cu
 CC_SOURCES = timer.cc
 
 CU_OBJECTS = $(CU_SOURCES:%.cu=%.o)
@@ -27,7 +27,7 @@ $(PROG): $(CU_OBJECTS) $(CC_OBJECTS)
 ptx: $(CU_PTX)
 
 run: $(PROG)
-	prun -v -np 1 -native '-l gpu=GTX480' $(PROG) 200
+	prun -v -np 1 -native '-l gpu=GTX480' ./$(PROG) 2048
 
 clean:
 	rm -f *.o $(PROG) *~
